[NAE-2027] Netgrif modules
- corrected tests
- this point all tests pass